Vertical align on actions dropdown toggle and small edits to prevent keynav overflow issue

--- a/ui/app/styles/core/title.scss
+++ b/ui/app/styles/core/title.scss
@@ -26,6 +26,6 @@
   .actions-dropdown {
     z-index: 3;
     display: inline-block;
-    margin-right: 0.5rem;
+    vertical-align: middle;
   }
 }
